# Editor

./: CMakeLists.txt  README.md
Apps/Editor/: CMakeLists.txt  main.cpp
Apps/Editor/Datas/: Mesh.cpp  Mesh.h  Types.h
Apps/Editor/Resources/: resources.qrc  style.qss
Apps/Editor/Resources/Translations/: zh_CN.qm  zh_CN.ts
Apps/Editor/Resources/shader/: fshader.glsl  vshader.glsl
Apps/Editor/Scene/: Camera.cpp  Camera.h  SceneManager.cpp  SceneManager.h
Apps/Editor/Widgets/: GlobalSignalEmiiter.cpp  GlobalSignalEmiiter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  ProgressBar.cpp  ProgressBar.h  ProgressBar.ui  QRibbon.cpp  QRibbon.h  qribbon.ui
Modules/Mesh/: CMakeLists.txt
Modules/Mesh/Include/Editor/Mesh/: Mesh.h  Simplify.h  Types.h
Modules/Mesh/Include/Editor/Mesh/Implement/: MeshImplBase.h
Modules/Mesh/Include/Editor/Mesh/Implement/OSGB/: OSGBMeshImpl.h
Modules/Mesh/Include/Editor/Mesh/Implement/Simplifiy/: VCGSimplify.h
Modules/Mesh/Sources/Editor/Mesh/: Mesh.cpp
Modules/Mesh/Sources/Editor/Mesh/Implement/: MeshImplBase.cpp
Modules/Mesh/Sources/Editor/Mesh/Implement/OSGB/: OSGBMeshImpl.cpp
Modules/Mesh/Sources/Editor/Mesh/Implement/Simplifiy/: VCGSimplify.cpp
